compiler/testData/diagnostics/tests/secondaryConstructors/constructorInTrait.kt
trait A {
    <!CONSTRUCTOR_IN_TRAIT!>constructor() {}<!>
}
